--- a/BarTender/app/src/main/res/layout/activity_ligne_commande.xml
+++ b/BarTender/app/src/main/res/layout/activity_ligne_commande.xml
@@ -22,16 +22,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <Button
+        <Spinner
             android:id="@+id/boisson"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Sélectionner"
-            android:layout_below="@+id/textView"
-            android:layout_toRightOf="@+id/textView"
-            android:layout_toEndOf="@+id/textView" />
-
+            android:layout_width="wrap_content"
+        />
 
         <TextView
             android:layout_width="wrap_content"
