--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_details.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_details.xml
@@ -4,9 +4,65 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:alignmentMode="alignBounds"
     tools:context="merliniserentant.bar_tender.consult_details">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/show_details_name_ll"
+        >
+
+        <TextView
+            android:text="@string/consult_details_name_title"
+            style="@style/show_details_title"
+            />
+
+        <TextView
+            android:id="@+id/consult_details_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/show_details_name_ll"
+        android:id="@+id/show_details_description_ll">
+
+        <TextView
+            android:text="@string/consult_details_description_title"
+            style="@style/show_details_title"
+            />
+
+        <TextView
+            android:id="@+id/consult_details_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/show_details_description_ll"
+        android:id="@+id/show_details_picture_ll">
+
+        <TextView
+            android:text="@string/consult_details_picture_title"
+            style="@style/show_details_title"
+            />
+
+        <ImageView
+            android:layout_height="300dp"
+            android:id="@+id/show_details_picture"
+            android:layout_width="wrap_content"
+            />
+    </LinearLayout>
+
 
 </RelativeLayout>
