--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/styles.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/styles.xml
@@ -4,5 +4,12 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <style name="show_details_title">
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_gravity">left|center_vertical</item>
+    </style>
 
 </resources>
