--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_commander.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_commander.xml
@@ -1,16 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.roselien.myapplication.LigneCommande">
 
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-        <TextView android:text="Commande" android:layout_width="wrap_content"
+        <TextView android:text="Commander" android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textCommande"
             android:layout_alignParentTop="true"
@@ -19,60 +16,76 @@
             android:layout_marginBottom="18dp"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Boisson"
-            android:id="@+id/textBoisson"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
-        <Spinner
-            android:id="@+id/boisson"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            />
+        <TableRow>
+            <TextView
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:text="Table"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quantité"
-            android:id="@+id/textView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            <EditText
+                android:layout_column="2"
+                android:id="@+id/table"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"/>
+        </TableRow>
 
-        <EditText
-            android:id="@+id/quantité"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
+        <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="Boisson"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Quantité"/>
+        </TableRow>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Table"/>
+            <TableRow>
+                <ListView
+                    android:id="@+id/list_Boisson"
+                    android:layout_column="1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content">
+                </ListView>
 
-        <EditText
-            android:id="@+id/table"
-            android:layout_width="wrap_content"
+                <ListView
+                    android:id="@+id/list_Qté"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content">
+                </ListView>
+            </TableRow>
+        </TableLayout>
+
+        <Button
+            android:id="@+id/ajouter"
             android:layout_height="wrap_content"
-            android:inputType="number"/>
+            android:layout_width="fill_parent"
+            android:text="Ajouter"
+            android:layout_marginTop="48dp"/>
 
         <Button
             android:id="@+id/commander"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Commander"
+            android:layout_width="fill_parent"
+            android:text="Finir la Commande"
             android:layout_marginTop="48dp"/>
 
         <Button
-            android:id="@+id/annuler"
+            android:id="@+id/annulerCom"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:text="Annuler"
             android:layout_marginTop="28dp"/>
 
-    </TableLayout>
+</LinearLayout>
 
-</RelativeLayout>
