Changement de taille des 2 listView, à paufiner

--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_commander.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_commander.xml
@@ -55,13 +55,13 @@
                     android:id="@+id/list_Boisson"
                     android:layout_column="1"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content">
+                    android:layout_width="4dp">
                 </ListView>
 
                 <ListView
                     android:id="@+id/list_Qté"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content">
+                    android:layout_width="4dp">
                 </ListView>
             </TableRow>
         </TableLayout>
