--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/connection.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/connection.xml
@@ -7,20 +7,24 @@
     android:useDefaultMargins="true" >
 
     <TextView
+        android:id="@+id/connection"
+        android:text="Connexion"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:layout_row="0"
 
-        android:text="Connection"
+
         android:textSize="32dip" />
 
     <TextView
+        android:text="Pseudo"
+        android:id="@+id/pseudo"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="1"
-        android:text="Pseudo: " >
+        >
     </TextView>
 
     <EditText
@@ -31,10 +35,12 @@
         android:ems="10" />
 
     <TextView
+        android:text="Mot de passe"
+        android:id="@+id/mdp"
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="2"
-        android:text="Mot de passe: " >
+         >
     </TextView>
 
     <EditText
@@ -47,22 +53,25 @@
         android:ems="8" />
 
     <Button
+        android:text="Login"
         android:id="@+id/button1"
         android:layout_column="1"
         android:layout_row="4"
-        android:text="Login" />
+         />
     <Button
+        android:text="Créer"
         android:id="@+id/button2"
         android:layout_column="1"
         android:layout_row="3"
 
-        android:text="CREER"
+
         />
     <Button
+        android:text="Choisir une autre langue"
         android:id="@+id/retourlangue"
         android:layout_column="1"
         android:layout_row="5"
-        android:text="Choisir une autre langue"
+
         />
 
 
