--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -41,7 +41,8 @@
         android:layout_columnSpan="2"
         android:layout_row="2"
 
-        android:ems="10" />
+        android:ems="10"
+        android:layout_height="96dp" />
 
     <TextView
         android:layout_column="0"
