--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -23,6 +23,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/nameboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="1"
@@ -37,6 +38,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/descriptionboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="2"
@@ -52,6 +54,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/stockboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="3"
@@ -66,6 +69,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/stockmaxboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="4"
@@ -74,10 +78,11 @@
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="5"
-        android:text="@string/stockmax" >
+        android:text="@string/seuil" >
     </TextView>
 
     <EditText
+        android:id="@+id/seuilboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="5"
@@ -90,21 +95,10 @@
     </TextView>
 
     <EditText
+        android:id="@+id/priceboisson"
         android:layout_column="1"
         android:layout_columnSpan="3"
         android:layout_row="6"
         android:ems="4" />
-
-    <Button
-        android:layout_column="2"
-        android:layout_row="7"
-        android:text="@string/applique"
-        android:layout_width="159dp" />
-    <Button
-        android:layout_column="2"
-        android:layout_row="8"
-
-        android:text="@string/retour"
-        android:layout_width="159dp" />
 
 </GridLayout>
