--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/modification_datastock.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/modification_datastock.xml
@@ -16,6 +16,7 @@
         android:textSize="32dip" />
 
     <TextView
+
         android:layout_column="0"
         android:layout_gravity="right"
         android:layout_row="1"
@@ -23,6 +24,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/name"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="1"
@@ -37,6 +39,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/stock1"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="2"
@@ -51,6 +54,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/stockmax1"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="3"
@@ -65,6 +69,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/seuil1"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="4"
