--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_addition.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_addition.xml
@@ -12,8 +12,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_height="wrap_content">
     <TextView
         android:text="Table:"
         android:layout_width="wrap_content"
