--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_commander.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_commander.xml
@@ -20,7 +20,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
-        <TableRow>
+        <TableRow android:layout_width="match_parent">
             <TextView
                 android:layout_column="1"
                 android:layout_width="wrap_content"
@@ -36,33 +36,39 @@
                 android:inputType="number"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:weightSum="2">
                 <TextView
                     android:layout_column="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:text="Boisson"/>
+                    android:text="Boisson"
+                    android:layout_weight="1"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Quantité"/>
+                    android:text="Quantité"
+                    android:layout_weight="1"/>
         </TableRow>
 
-            <TableRow>
+            <TableRow
+                android:weightSum="2">
+                <ListView
+                    android:id="@+id/list_Qté"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1">
+                </ListView>
                 <ListView
                     android:id="@+id/list_Boisson"
                     android:layout_column="1"
                     android:layout_height="wrap_content"
-                    android:layout_width="4dp">
+                    android:layout_width="0dp"
+                    android:layout_weight="1">
                 </ListView>
 
-                <ListView
-                    android:id="@+id/list_Qté"
-                    android:layout_height="wrap_content"
-                    android:layout_width="4dp">
-                </ListView>
             </TableRow>
         </TableLayout>
 
