Modif Commande, Ajouter, Addition

--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_addition.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_addition.xml
@@ -31,4 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Payement" />
+
+    <Button
+        android:id="@+id/annulerAddition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retour" />
 </LinearLayout>
