--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_ajouter.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_ajouter.xml
@@ -9,7 +9,6 @@
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
         <TextView android:text="Ajouter" android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textCommande"
@@ -18,6 +17,20 @@
             android:layout_marginTop="18dp"
             android:layout_marginBottom="18dp"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+        <TextView
+            android:layout_column="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:text="Table"/>
+
+        <EditText
+            android:layout_column="2"
+            android:id="@+id/tableAjouter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +54,7 @@
             android:layout_alignParentStart="true" />
 
         <EditText
-            android:id="@+id/quantité"
+            android:id="@+id/quantitéAjouter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"/>
