--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_details.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_details.xml
@@ -7,6 +7,14 @@
     android:alignmentMode="alignBounds"
     tools:context="merliniserentant.bar_tender.consult_details">
 
+    <ImageView
+        android:layout_height="300dp"
+        android:id="@+id/consult_details_picture"
+        android:layout_width="wrap_content"
+        android:layout_above="@+id/show_details_name_ll"
+        android:layout_marginLeft="50dp"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,6 +37,9 @@
     </LinearLayout>
 
 
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,23 +57,7 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/show_details_description_ll"
-        android:id="@+id/consult_details_picture_ll">
 
-        <TextView
-            android:text="@string/consult_details_picture_title"
-            style="@style/show_details_title"
-            />
-
-        <ImageView
-            android:layout_height="300dp"
-            android:id="@+id/consult_details_picture"
-            android:layout_width="wrap_content"
-            />
-    </LinearLayout>
 
 
 </RelativeLayout>
