--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_ajouter.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_ajouter.xml
@@ -19,6 +19,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"/>
 
         <TextView
+            android:id="@+id/tableTexte"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,10 +34,11 @@
             android:inputType="number"/>
 
         <TextView
+            android:id="@+id/boissonTexte"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Boisson"
-            android:id="@+id/textBoisson"
+            android:id="@+id/texteBoisson"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -49,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantité"
-            android:id="@+id/textView"
+            android:id="@+id/texteQuantité"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
