--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_addition.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_addition.xml
@@ -1,5 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -9,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="30dp"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
     <LinearLayout
         android:orientation="horizontal"
@@ -33,6 +37,8 @@
         android:id="@+id/premier"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
         android:text="Paiement" />
 
     <Button
