--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -100,5 +100,18 @@
         android:layout_columnSpan="3"
         android:layout_row="6"
         android:ems="4" />
+        
+    <Button
+        android:id="@+id/appajout"
+        android:layout_column="2"
+        android:layout_row="7"
+        android:text="@string/applique"
+        android:layout_width="159dp" />
+    <Button
+        android:id="@+id/retourajout"
+        android:layout_column="2"
+        android:layout_row="8"
+        android:text="@string/retour"
+        android:layout_width="159dp" />
 
 </GridLayout>
