--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/consult.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/consult.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView android:text="Carte" android:layout_width="wrap_content"
+    <TextView
+        android:text="Carte"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textCommande"
         android:layout_alignParentTop="true"
