--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_details.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_details.xml
@@ -13,6 +13,7 @@
         android:id="@+id/consult_details_picture"
         android:layout_width="wrap_content"
         android:layout_marginLeft="50dp"
+        android:layout_above="@+id/show_details_name_ll"
         />
 
     <LinearLayout
@@ -22,14 +23,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:layout_below="@+id/consult_details_picture"
         android:id="@+id/show_details_name_ll"
         >
-
-        <TextView
-            android:id="@+id/nomBoisson"
-            android:text="@string/consult_details_name_title"
-            style="@style/show_details_title"
-            />
 
         <TextView
             android:id="@+id/consult_details_name"
@@ -49,18 +45,27 @@
         android:id="@+id/show_details_description_ll">
 
         <TextView
-            android:id="@+id/detailsDescription"
-            android:text="@string/consult_details_description_title"
-            style="@style/show_details_title"
-            />
-
-        <TextView
             android:id="@+id/consult_details_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/detailsDescription"
+        android:text="@string/consult_details_description_title"
+        style="@style/show_details_title"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
+    <TextView
+        android:id="@+id/nomBoisson"
+        android:text="@string/consult_details_name_title"
+        style="@style/show_details_title"
+        android:layout_above="@+id/detailsDescription"
+        android:layout_below="@id/show_details_description_ll"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
