--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_detail.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_detail.xml
@@ -26,6 +26,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detailsDescription"
+            android:text="Description"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/consult_details_description"/>
 
         </LinearLayout>
 </LinearLayout>
