--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/retrait_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/retrait_boisson.xml
@@ -24,6 +24,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/nameremove"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_row="1"
@@ -33,11 +34,13 @@
 
 
     <Button
+        android:id="@+id/removebutton"
         android:layout_column="2"
         android:layout_row="2"
         android:text="Retirer"
         android:layout_width="159dp" />
     <Button
+        android:id="@+id/returnbutton"
         android:layout_column="2"
         android:layout_row="3"
         android:text="@string/retour"
