--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/modification_datastock.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/modification_datastock.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="4"
-    android:useDefaultMargins="true" >
+    android:useDefaultMargins="true"
+    android:id="@+id/">
 
     <TextView
         android:layout_column="0"
