--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_detail.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_consult_detail.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nomBoisson"
-            android:text="Nom de la boisson :"/>
+            android:text="Nom de la boisson : "/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detailsDescription"
-            android:text="Description"/>
+            android:text="Description : "/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
