--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/collecto_row_item2.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/collecto_row_item2.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="20dp"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:layout_gravity="center_vertical"
         android:layout_weight="25"/>
 
@@ -18,8 +19,9 @@
         android:id="@+id/prixrow2"
         android:layout_width="20dp"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:layout_gravity="center_vertical"
-        android:layout_weight="25"/>
+        android:layout_weight="15"/>
 
 
 </LinearLayout>
