--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/consult.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/consult.xml
@@ -13,6 +13,24 @@
         android:layout_marginTop="18dp"
         android:layout_marginBottom="18dp"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="200dp"
+            android:layout_weight="25"
+            android:textSize="20dp"
+            android:layout_height="wrap_content"
+            android:text="Boisson :"/>
+        <TextView
+            android:layout_width="50dp"
+            android:textSize="20dp"
+
+            android:layout_height="wrap_content"
+            android:layout_weight="15"
+            android:text="Prix :"/>
+    </LinearLayout>
 
     <TableLayout
         android:layout_width="fill_parent"
@@ -24,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"></ListView>
-       
+
 
 
     </TableLayout>
