--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_carte.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/activity_carte.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:textSize="22dp"/>
     <TextView
+        android:layout_below="@+id/happyhour1"
         android:id="@+id/happyhour2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
