--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/connection.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/connection.xml
@@ -51,18 +51,37 @@
 
         android:inputType="textPassword"
         android:ems="8" />
+    <TextView
+        android:text="Nom et prenom"
+        android:id="@+id/nomutilisateur"
+        android:layout_column="0"
+
+        android:layout_gravity="right"
+        android:layout_row="3"
+        >
+    </TextView>
+
+    <EditText
+        android:id="@+id/input3"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_row="3"
+
+
+        android:ems="8" />
 
     <Button
         android:text="Login"
         android:id="@+id/button1"
         android:layout_column="1"
-        android:layout_row="4"
+        android:layout_row="5"
          />
+
     <Button
         android:text="Créer"
         android:id="@+id/button2"
         android:layout_column="1"
-        android:layout_row="3"
+        android:layout_row="4"
 
 
         />
@@ -70,7 +89,7 @@
         android:text="Choisir une autre langue"
         android:id="@+id/retourlangue"
         android:layout_column="1"
-        android:layout_row="5"
+        android:layout_row="6"
 
         />
 
