--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ajout_boisson.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="40dp"
         android:layout_row="0"
 
-        android:text="Ajout"
+        android:text="Ajout d'une boisson"
         android:textSize="32dip" />
 
     <TextView
@@ -22,26 +22,68 @@
         android:text="@string/nomboisson" >
     </TextView>
 
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="2"
+        android:text="en français :" >
+    </TextView>
+
     <EditText
         android:id="@+id/nameboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        android:layout_row="1"
+        android:layout_row="2"
+
+        android:ems="10" />
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="3"
+        android:text="en anglais :" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/nomboisson"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_row="3"
+
+        android:ems="10" />
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="4"
+        android:text="en néerlandais :" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/naamboisson"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_row="4"
 
         android:ems="10" />
 
     <TextView
         android:layout_column="0"
         android:layout_gravity="right"
-        android:layout_row="2"
+        android:layout_row="5"
         android:text="Description" >
+    </TextView>
+
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="6"
+        android:text="en français" >
     </TextView>
 
     <EditText
         android:id="@+id/descriptionboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        android:layout_row="2"
+        android:layout_row="6"
 
         android:ems="10"
         android:layout_height="96dp" />
@@ -49,7 +91,54 @@
     <TextView
         android:layout_column="0"
         android:layout_gravity="right"
-        android:layout_row="3"
+        android:layout_row="7"
+        android:text="en anglais" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/descriptboisson"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_row="7"
+
+        android:ems="10"
+        android:layout_height="96dp" />
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="8"
+        android:text="en néerlandais" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/descboisson"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_row="8"
+
+        android:ems="10"
+        android:layout_height="96dp" />
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="9"
+        android:text="Logotype :" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/logotypeboisson"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_row="9"
+
+        android:ems="10"
+        android:layout_height="96dp" />
+
+
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="10"
         android:text="@string/stock" >
     </TextView>
 
@@ -57,14 +146,14 @@
         android:id="@+id/stockboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        android:layout_row="3"
+        android:layout_row="10"
 
         android:ems="4" />
 
     <TextView
         android:layout_column="0"
         android:layout_gravity="right"
-        android:layout_row="4"
+        android:layout_row="11"
         android:text="@string/stockmax" >
     </TextView>
 
@@ -72,12 +161,12 @@
         android:id="@+id/stockmaxboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        android:layout_row="4"
+        android:layout_row="11"
         android:ems="4" />
     <TextView
         android:layout_column="0"
         android:layout_gravity="right"
-        android:layout_row="5"
+        android:layout_row="12"
         android:text="@string/seuil" >
     </TextView>
 
@@ -85,12 +174,12 @@
         android:id="@+id/seuilboisson"
         android:layout_column="1"
         android:layout_columnSpan="2"
-        android:layout_row="5"
+        android:layout_row="12"
         android:ems="4" />
     <TextView
         android:layout_column="0"
         android:layout_gravity="right"
-        android:layout_row="6"
+        android:layout_row="13"
         android:text="Prix" >
     </TextView>
 
@@ -98,19 +187,19 @@
         android:id="@+id/priceboisson"
         android:layout_column="1"
         android:layout_columnSpan="3"
-        android:layout_row="6"
+        android:layout_row="13"
         android:ems="4" />
         
     <Button
         android:id="@+id/appajout"
         android:layout_column="2"
-        android:layout_row="7"
+        android:layout_row="14"
         android:text="@string/applique"
         android:layout_width="159dp" />
     <Button
         android:id="@+id/retourajout"
         android:layout_column="2"
-        android:layout_row="8"
+        android:layout_row="14"
         android:text="@string/retour"
         android:layout_width="159dp" />
 
