--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ecranlangue.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ecranlangue.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bar Tender"
-        android:id="@+id/titleapp"/>
+
+        android:id="@+id/imagebar"/>
     <TextView
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
