--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ecranlangue.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/ecranlangue.xml
@@ -30,6 +30,6 @@
         android:id="@+id/Neederlands"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Neederlands"/>
+        android:text="Nederlands"/>
 
 </LinearLayout>
