--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/connection.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/layout/connection.xml
@@ -52,6 +52,7 @@
         android:inputType="textPassword"
         android:ems="8" />
     <TextView
+        android:id="@+id/nomprenom"
         android:text="Nom et prenom"
         android:layout_column="0"
 
